src/rules/snapshots/pg_migration_lint__rules__pgm005__tests__fires_on_existing_child_without_check.snap
---
source: src/rules/pgm005.rs
expression: findings
---
- rule_id: PGM005
  severity: Major
  message: "ATTACH PARTITION of existing table 'measurements_2024' to 'measurements' will scan the entire child table under ACCESS EXCLUSIVE lock to verify the partition bound. Add a CHECK constraint mirroring the partition bound, validate it separately, then attach."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
