src/rules/snapshots/pg_migration_lint__rules__pgm005__tests__unique_not_null_no_pk_fires.snap
---
source: src/rules/pgm005.rs
assertion_line: 149
expression: findings
---
- rule_id: PGM005
  severity: Info
  message: "Table 'users' uses UNIQUE NOT NULL instead of PRIMARY KEY. Functionally equivalent but PRIMARY KEY is conventional and more explicit."
  file: migrations/001.sql
  start_line: 1
  end_line: 1
